changed the data page

--- a/data/index.html
+++ b/data/index.html
@@ -32,46 +32,55 @@
         <div class="wrapper_analysistext">
             <h1>Data Visualization</h1>
             <p>
-                My passion for data stems from the ways we can use it to communicate. An effective visual can intuitively pass along insights that would otherwise require a wall of text which would loose the interest of some. 
+                In a world driven by complex systems that are largely inaccessible without relevant expertise, I pride myself on presenting broad trends in intuitive ways through research and visualization. 
             </p>
             <div class="wrapper_datavisual1">
                 <img src="visuals/visualization_map.png" alt="" >
             </div> 
             <p>
-                In my work with Energy Trust of Oregon, I was tasked with creating Power BI Dashboards to clearly visualize the state of data quality issues in the data warehouse. I also presented visual breakdowns of available metrics related to undeliverable checks.
+                As a data specialist with <strong>Energy Trust of Oregon</strong>, I used <strong>Power BI (DAX)</strong> to create dashboards that intuitively communicate the status of data quality issues throughout their data warehouse. I worked extensively with <strong>relational databases</strong> to gather metrics from multiple tables in doing so.
             </p>
             <p>
-                For an MCC Road development project during my Internship with IDG, I visualized data in a baseline data report for consumption by USAID. This involved touching base with team members about iterations that worked well in previous reports, gathering data, and using excel to create charts that clearly communicate statistical trends in the data.
+                I have also found opportunities to use data visualization in Economic Development. During my internship with the <strong>International Development Group (IDG)</strong>, we were tasked assisting in the construction of a series of highways in Southern Niger. This project would provide tangible benefits for years to come in a region hard pressed by issues including terrorism and extreme poverty.
+            </p>
+            <p>
+                For our part, we were tasked with writing a baseline data report so that we could track the effect of our efforts on road usage statistics. I was responsible for creating visuals in <strong>Excel</strong>, clearly defining relevant metrics like gender and age distributions in comparison to the local population.
             </p>           
             <br>
             <br>
             <h1>Databases</h1>
             <p>
-                With Energy Trust of Oregon, I was responsible for creating SQL queries in Power BI capable of indicating data quality issues. This data came from the organization's data warehouse, which I became familar with. I also spent time in college studying databases, going over topics like relational databases and cloud computing (Google BigQuery).
+                Working on data quality issues for <strong>Energy Trust of Oregon</strong>, I became intimately familiar with the structure of their data warehouse, as well as different means for accessing it. I used <strong>Microsoft SQL Server</strong> and <strong>R</strong> to access the data, often to get a sense of the tables I was using before importing them into <strong>Power BI</strong> for display. This experience has given me confidence when working with <strong>relational databases</strong>.
             </p>
             <h1>Data Analysis/Research</h1>
             <p>
-                My previous experiences have often hinged on using data to effectively tackle real-world problems. 
+                I am passionate about my expertise in using data to help informed decision-making and research.
             </p>
             <p>
                 As an intern with the <strong>International Development Group</strong>, I fulfilled a variety of roles involving data analysis. As a project for the summer, I researched the Barriers to Business in the Western Balkans, communicating my findings to the rest of the company both through a written report and a virtual presentation. This undertaking focused on using data from the World Bank to accurately describe issues with private sector activities on the ground.
             </p>
             <p>
-                As a fiscal note analyst with the <strong>Washington State Department of Commerce</strong>, I was introduced to different tax models. I routinely interpreted fiscal notes from the Department of Revenue describing the assumptions and estimations of potential tax revenue impacts.
+                As a fiscal note analyst with the <strong>Washington State Department of Commerce</strong>, I was responsible for gaining accurate estimations of the impact state legislation would have on local governments. To do this, I consulted relevant public agencies and institutions for estimates on how bills would affect their budgets. I then summarized this information into documents that informed both policy makers and the general public.
             </p>
             <p>
-                Even in the classroom, I found opportunities to put theory to good use. For my Master's degree, I wrote an econometric report deconstructing the impact of COVID-19 lockdowns on international trade intensity. I used a fixed effect gravity model to identify a 25% drop in export integration and 8% drop in import integration under quarantine. I also wrote a blog post testing whether the polling errors of the US general election were significantly different between 2016 and 2020.
+                Even in the classroom, I found opportunities to put theory to good use. For my <strong>Master's degree</strong>, I wrote an econometric report deconstructing the impact of COVID-19 lockdowns on international trade intensity. I used a fixed effect gravity model to identify a 25% drop in export integration and 8% drop in import integration under quarantine. I also wrote a blog post testing whether the polling errors of the US general election were significantly different between 2016 and 2020.
             </p>
             <p>
-                My academic curriculum also included exposure to advanced econometrics and machine learning. Specifically, I had the opportunity to work with the TidyModels R package, where I became familiar with the implementation and theory behind models. I coordinated with my classmate Jonas Bowman to complete a project using different models to predict the selection of yearly NBA AllStars with seasonal statistics. I have also completed several projects on my kaggle profile, using machine learning to predict housing prices and titanic survivorship.
+                My academic curriculum also included exposure to advanced econometrics and machine learning. Specifically, I had the opportunity to work with the <strong>TidyModels R package</strong>, where I became familiar with the implementation and theory behind models. I coordinated with my classmate Jonas Bowman to complete a project using different models to predict the selection of yearly NBA AllStars with seasonal statistics. I have also completed several projects on my <a href="https://www.kaggle.com/ianbogley">kaggle profile</a>, using machine learning to predict housing prices and titanic survivorship.
             </p>
             <p>
-                When given a chance to assist <strong>ShelterCare</strong> with baseline data from employee satisfaction surveys, I visualized and wrote a guide for using it to improve a professional environment. 
+                Even before landing my first job, I was able to use my skills to help a local non-profit, <strong>ShelterCare</strong>, in interpreting baseline data from their initial workplace surveys. Here, I visualized the data and provided a report that outlined industry standards for using employee satisfaction surveys.
             </p>
-            <h1>Data Collection</h1>
+            <h1>Data Collection/Cleaning</h1>
             <div class="wrapper_visualAFFEC">
                 <img src="visuals/logo_affec.png" alt="">
             </div>
+            <p>
+                I am well versed in data scrubbing and wrangling. Having worked with the Tidyverse and Data.Table packages in R, I am confident that I can adequately tackle the cleaning, reformatting, and standaridization of datasets.
+            </p>
+            <p>
+                At <strong>Energy Trust of Oregon</strong>, I was responsible for cleaning data on utility customer information. This involved keeping a record of differently formatted datasets aqcuired over the years, then writing an <strong>R</strong> script capable of generating a single dataset for use by others in the organization.
+            </p>
             <p>
                 Another relevant adventure was my time with <strong>A Family for Every Child</strong>. According to the Department of Health and Human Services, there are around 400,000 children in foster care in the United States. (https://www.acf.hhs.gov/sites/default/files/documents/cb/afcarsreport28.pdf) Under the supervision of the volunteer coordinator, I led a project to improve Child and Family Matching Events. These seminars, which became virtual due to the COVID-19 Pandemic, were aimed at connecting foster children and potential adopting families. To help make these virtual events a success, I:
             </p>
