--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="element_hometext">
             <p>
-                I pride myself on being a coachable and versatile professional with proven expertise in using data to communicate and solve problems. My previous experiences have focused on networking and communicating through various mediums,  intuitively describing the issues surrounding public policy and private sector projects, and coordinating with teams in a remote setting to get the job done.
+                I pride myself on being a coachable and versatile professional with proven expertise in data analysis and communication. Throughout my career, my positions have focused on translating highly technical information into intuitive formats.
             </p>
             <p>
                 Master of Science in Applied Economics, University of Oregon 2021: Subject areas focused on advanced econometrics, economic development, regional growth, and international trade.
