added us economy stats app to homepage

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <p>
                 Master of Science in Applied Economics, University of Oregon 2021: Subject areas focused on advanced econometrics, economic development, regional growth, and international trade.
             </p>
+            <iframe height="500" width="100%" frameborder="no" src="https://ibogley.shinyapps.io/useconomystats/"> </iframe>
             <h3>Professional skillset:</h3>
             <ul>
                 <li><strong>Programming and other digital languages:</strong> R, Python, SQL, Git Bash, HTML, JavaScript</li>
