--- a/policy/index.html
+++ b/policy/index.html
@@ -18,6 +18,9 @@
                 <a href="mailto:ianbogley8@gmail.com">Contact Me</a>
             </div>          
             <div class="element_nav">
+                <a href="../blog/index.html" href="">Blog</a>
+            </div>
+            <div class="element_nav">
                 <a href="../data/index.html">Data</a>
             </div>
             <div class="element_nav">
