Remove index.html from URLs

--- a/policy/index.html
+++ b/policy/index.html
@@ -18,16 +18,16 @@
                 <a href="mailto:ianbogley8@gmail.com">Contact Me</a>
             </div>          
             <div class="element_nav">
-                <a href="../blog/index.html" href="">Blog</a>
+                <a href="../blog/" href="">Blog</a>
             </div>
             <div class="element_nav">
-                <a href="../data/index.html">Data</a>
+                <a href="../data/">Data</a>
             </div>
             <div class="element_nav">
                 <a id="active_nav" href="">Policy</a>
             </div>
             <div class="element_nav">
-                <a href="../index.html">Home</a>
+                <a href="../">Home</a>
             </div>
         </div>
     </header>
