adjust text, resume

--- a/data/index.html
+++ b/data/index.html
@@ -33,6 +33,10 @@
     </header>
     <div class="content">
         <div class="wrapper_analysistext">
+            <h1>Data Analysis and Machine Learning</h1>
+            <p>
+                My experience with data analysis spans causal inference, modeling, and forecasting. Some of the projects I have worked on include identifying the necessary growth in our subcontractor network to meet organizational goals, forecasting saved energy based on year to date data, and performing hypothesis testing to identify the presence of exterior effects. In machine learning, I have become familiar with algorithms such as K-Nearest Neighbors, Decision Trees, Logistic Regression, and Random Forest.
+            </p>
             <h1>Data Visualization</h1>
             <p>
                 In a world driven by complex systems that are largely inaccessible without relevant expertise, I pride myself on presenting broad trends in intuitive ways through research and visualization. 
@@ -53,7 +57,7 @@
             <br>
             <h1>Databases</h1>
             <p>
-                Working on data quality issues for <strong>Energy Trust of Oregon</strong>, I became intimately familiar with the structure of their data warehouse, as well as different means for accessing it. I used <strong>Microsoft SQL Server</strong> and <strong>R</strong> to access the data, often to get a sense of the tables I was using before importing them into <strong>Power BI</strong> for display. This experience has given me confidence when working with <strong>relational databases</strong>.
+                Working on data quality issues for <strong>Energy Trust of Oregon</strong>, I became intimately familiar with the structure of their relational databases, as well as different means for accessing it. I used <strong>Microsoft SQL Server</strong> and <strong>R</strong> to access the data in a tabular format, writing queries for pulling it into <strong>Power BI</strong> for display. This experience has given me confidence when working with <strong>relational databases</strong>.
             </p>
             <h1>Data Analysis/Research</h1>
             <p>
