--- a/policy/index.html
+++ b/policy/index.html
@@ -36,13 +36,13 @@
             <div class="wrapper_policy_energy">
                 <h1>Renewable Energy/Utilities</h1>
                 <p>
-                    While working as a Fiscal Note Analyst with the Washington State Department of Commerce, I gained intimate exposure with a variety of legislation relating to energy and utilities. My job was to rigorously read the content of potential legislation, then reach out to relevant experts in local government to estimate the fiscal impact.
+                    As a data specialist with Energy Trust of Oregon, I was responsible for putting together dashboards communicating the activity of programs aimed at distributing energy efficient technology like solar panels to low and moderate income oregonians.
                 </p>
                 <p>
-                    This role provided exposure to new developments in various renewable technologies around Washington State. I read through bills relating to solar power, green roofs, electrolytic and renewable hydrogen, and electric vehicles. I also established contacts throughout local government agencies and institutions to better understand the rammifications of legislation.
+                    While working as a Fiscal Note Analyst with the Washington State Department of Commerce, I gained exposure to a variety of legislation relating to energy and utilities. My job was to rigorously read the content of potential legislation, then reach out to relevant experts in local government to estimate the fiscal impact.
                 </p>
                 <p>
-                    During my master's degree, I also took a class on natural resources. This curriculum studied issues in energy production, including the long-run variable cost advantages of renewable technologies, modeling of resource extraction paths, and the importance of local ecosystems in regional economies.
+                    This role provided a view into new developments in various renewable technologies around Washington State. I read through bills relating to solar power, green roofs, electrolytic and renewable hydrogen, and electric vehicles. I also established contacts throughout local government agencies and institutions to better understand the rammifications of legislation.
                 </p>
             </div>
             <div class="wrapper_policy_ed">
@@ -59,12 +59,9 @@
                 <p>
                     My graduate academic studies focused on regional economic growth and development. I intentionally chose classes which gave me additional skills to encourage private sector development through public policy. Graduate-level courses included:
                 </p>
-                <ul>
-                    <li>Two quarters of Economic Development</li>
-                    <li>One class in urban and regional economies</li>
-                    <li>Two courses in macroeconomics and policy analysis</li>
-                    <li>Classes in natural resource economics and political economy analysis</li>
-                </ul>
+                <p>
+                    I also have a deep interest in economic development as a function of national strategic positioning. From identifying key events and factors in the rapid growth of China, the dutch disease and its manifestation in Russia, to the cost of living crisis in the United States, I follow current events to identify trends in economic development.
+                </p>
             </div>
             <div class="wrapper_policy_inf">
                 <h1>Infrastructure/Public Transportation</h1>
