Adjust text, resume further

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 I pride myself on being a coachable and versatile professional with proven expertise in data analysis and communication. Throughout my career, my positions have focused on translating highly technical information into intuitive formats.
             </p>
             <p>
-                Currently serving as a data specialist, creating and maintaining Power BI dashboards which communicate the activity of programs in the pursuit of providing low and moderate income Oregonians energy efficient technology. I also program Shiny apps to automate day-to-day operations, conduct ad-hoc analysis, and use SQL to identify data quality issues in our relational databases.
+                My current role is that of a data specialist, creating and maintaining Power BI dashboards which communicate the activity of programs at Energy Trust of Oregon which provide energy efficiency technology to low and moderate income Oregonians (and Washingtonians). I also program Shiny apps to automate day-to-day operations, conduct ad-hoc data requests and analysis, and use SQL to identify data quality issues in our relational databases.
             </p>
             <h3>Professional skillset:</h3>
             <ul>
-                <li><strong>Programming and other digital tools:</strong> R, Python, SQL, VBA, Power BI, Excel,Git, HTML, JavaScript, Microsoft Azure.</li>
-                <li><strong>Data Analysis:</strong> Data collection, data scrubbing/wrangling, visualization, analysis (regression, EDA), machine learning (KNN, decision trees, logistic regression, random forest), big data (Google Bigquery).</li>
+                <li><strong>Programming and other digital tools:</strong> R, Python, SQL, VBA, Power BI, Excel,Git, HTML, JavaScript.</li>
+                <li><strong>Data Analysis:</strong> Data collection, data scrubbing/wrangling, visualization, analysis (regression, hypothesis testing, EDA), machine learning (KNN, decision trees, logistic regression, random forest), big data (Google Bigquery).</li>
                 <li><strong>Sectoral Policy Expertise:</strong> economic development, regional growth, international trade, infrastructure, broadband internet access, energy policy, utilities, financial institutions, political economy analysis and quality of governance.</li>
             </ul>
             <h3>Previous Research:</h3>
@@ -98,9 +98,7 @@
                 </div>
                 <div class="wrapper_projects" id="wrapper_documents">
                     <ul>
-                        <li><button id="button_document_resume_data">Resume: Data focus</button></li>
-                        <li><button id="button_document_resume_policy">Resume: Policy focus</button></li>
-                        <li><button id="button_document_resume_energy">Resume: Energy focus</button></li>
+                        <li><button id="button_document_resume">Resume</button></li>
                         <li><button id="button_document_transcript">Transcript</button></li>
                         <li><button id="button_document_letter">Letter of Recommendation</button></li>
                     </ul>
