--- a/policy/index.html
+++ b/policy/index.html
@@ -36,7 +36,7 @@
             <div class="wrapper_policy_energy">
                 <h1>Renewable Energy/Utilities</h1>
                 <p>
-                    As a data specialist with Energy Trust of Oregon, I was responsible for putting together dashboards communicating the activity of programs aimed at distributing energy efficient technology like solar panels to low and moderate income oregonians.
+                    As a data specialist with Energy Trust of Oregon, I am responsible for putting together dashboards communicating the activity of programs aimed at distributing energy efficient technology like solar panels, ductless heat pumps, and smart thermostats to low and moderate income oregonians.
                 </p>
                 <p>
                     While working as a Fiscal Note Analyst with the Washington State Department of Commerce, I gained exposure to a variety of legislation relating to energy and utilities. My job was to rigorously read the content of potential legislation, then reach out to relevant experts in local government to estimate the fiscal impact.
@@ -133,9 +133,7 @@
                 </div>
                 <div class="wrapper_projects" id="wrapper_documents">
                     <ul>
-                        <li><button id="button_document_resume_data">Resume: Data focus</button></li>
-                        <li><button id="button_document_resume_policy">Resume: Policy focus</button></li>
-                        <li><button id="button_document_resume_energy">Resume: Energy focus</button></li>
+                        <li><button id="button_document_resume">Resume</button></li>
                         <li><button id="button_document_transcript">Transcript</button></li>
                         <li><button id="button_document_letter">Letter of Recommendation</button></li>
                     </ul>
