Revert "Remove index.html from URLs"
This reverts commit 2ad2928ed6a14da48f8893a453b66083bbd8729f.

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                 <a href="mailto:ianbogley8@gmail.com"> Contact Me </a>
             </div>          
             <div class="element_nav">
-                <a href="blog/"> Blog </a>
+                <a href="blog/index.html"> Blog </a>
             </div>
             <div class="element_nav">
-                <a href="data/"> Data </a>
+                <a href="data/index.html"> Data </a>
             </div>
             <div class="element_nav">
-                <a href="policy/"> Policy </a>
+                <a href="policy/index.html"> Policy </a>
             </div>
             <div class="element_nav">
                 <a id="active_nav" href="">Home</a>
